--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "request": "^2.88.0",
     "request-json": "^0.6.3",
     "save": "^2.3.2",
+    "xml-js": "^1.6.8",
     "xoauth2": "^1.2.0"
   },
   "author": "Pallavi Desai",
